added api, viewmodel & adapter for recycler view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="Hello World!"
@@ -16,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:defaultNavHost = "true"
         app:navGraph = "@navigation/nav_graph"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout="@layout/fragment_list" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
